<resources>
    <string name="email_address">Email Address</string>
    <string name="delete_observation">Delete observation</string>
    <string name="observation_deleted">Observation deleted</string>
    <string name="species_guess_hint">Species name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="couldnt_load_nearby_observations">Couldn\'t load nearby observations: %1$s</string>
    <string name="username_invalid">Username or password was invalid, please sign in again.</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_in">Signed in!</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="please_sign_in_description">Please sign in to your iNaturalist account or sign up for a new one.</string>
    <string name="please_enable_location_services">Please enable location services in order to find your current location...</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="photo_not_specified">Photo not specified</string>
    <string name="set_date">Date</string>
    <string name="set_time">Time</string>
    <string name="something_went_wrong">Blast, something went wrong: %1$s</string>
    <string name="edit">Edit</string>
    <string name="oh_no">Oh no! %1$s</string>
    <string name="observations">My Observations</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="projects">Projects</string>
    <string name="delete_photo">Delete photo</string>
    <string name="my_location">My Location</string>
    <string name="nearby_observations">Nearby Observations</string>
    <string name="add">Add</string>
    <string name="view_on_inat">View on iNaturalist.org</string>
    <string name="reload">Reload</string>
    <string name="view_in_browser">View in browser</string>
    <string name="add_observation">Add observation</string>
    <string name="take_picture">Take picture</string>
    <string name="save">Save</string>
    <string name="no_observations_yet">No observations yet!</string>
    <string name="or">or</string>
    <string name="signed_out">Sign out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_species">Unknown species</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="discard_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree">Agree?</string>
    <string name="no_comments">No comments/identifications yet</string>
    <string name="add_comment">Add comment</string>
    <string name="add_id">Add identification</string>
    <string name="remarks">Remarks...</string>
    <string name="enter_taxon_name">Species name</string>
    <string name="no_projects">No projects found!</string>
    <string name="no_guides">No guides found!</string>
    <string name="loading_projects">Loading projects...</string>
    <string name="joined_projects">Joined</string>
    <string name="nearby_projects">Nearby</string>
    <string name="featured_projects">Featured</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="no_check_list">No Taxa in Check List!</string>
    <string name="failed_to_add_obs_to_project">Failed to add observation \'%1$s\' to project \'%2$s\': %3$s</string>
    <string name="invalid_project_field">Please enter a valid value for field \'%1s\'</string>
    <string name="select_projects">Select from Joined Projects</string>
    <string name="not_connected">You must be connected to the Internet in order to do that!</string>
    <string name="search_projects">Search projects...</string>
    <string name="search_guides">Search guides...</string>
    <string name="save_observation">Save observation</string>
    <string name="about_guide">About</string>
    <string name="about_guide_all_caps">ABOUT</string>
    <string name="about_project">About</string>
    <string name="about_project_all_caps">ABOUT</string>
    <string name="about_this_app">About</string>
    <string name="about_taxon_short">About</string>
    <string name="geoprivacy">Geoprivacy</string>
    <string name="geoprivacy_with_value">Geoprivacy: %1$s</string>
    <string name="delete_confirmation">Are you sure you want to delete this observation?</string>
    <string name="guides">Guides</string>
    <string name="my_guides">Yours</string>
    <string name="nearby_guides">Nearby</string>
    <string name="all_guides">All</string>
    <string name="no_taxa">No taxa found for this guide!</string>
    <string name="search_taxa">Search taxa...</string>
    <string name="no_internet_guides">Guides require an Internet connection</string>
    <string name="no_internet_projects">Projects require an Internet connection</string>
    <string name="locale_gl">Galician</string>
    <string name="locale_eu">Basque</string>
    <string name="use_device_language_settings">Use device language settings</string>
    <string name="choose_location">Choose Location</string>
    <string name="done">Done</string>
    <string name="please_sign_in_via_settings">You must be logged in to view projects you\'ve joined.</string>
    <string name="contact_support">Contact Support</string>
    <string name="leave_project">Leave Project</string>
    <string name="leave_project_confirmation">Are you sure you want to leave this project?</string>
    <string name="discard_location_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_locality_notes">Edit Locality Notes</string>
    <string name="get_current_location">Get current location</string>
    <string name="pull_to_refresh">Pull to refresh...</string>
    <string name="release_to_refresh">Release to refresh...</string>
    <string name="refreshing">Refreshing...</string>
    <plurals name="sync_x_observations">
        <item quantity="zero">Sync %1$d observations</item>
        <item quantity="one">Sync %1$d observation</item>
        <item quantity="two">Sync %1$d observations</item>
        <item quantity="few">Sync %1$d observations</item>
        <item quantity="many">Sync %1$d observations</item>
        <item quantity="other">Sync %1$d observations</item>
    </plurals>
    <string name="sync_observations">Sync Observations</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="view_nearby_observations">View Nearby Observations</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="login_signup">Log In / Sign Up</string>
    <string name="automatic_upload">Automatic Upload (Auto Sync)</string>
    <string name="delete">Delete</string>
    <string name="auto_upload_description">Auto-upload new observations and edits to observations</string>
    <string name="language">Language</string>
    <string name="version">Version</string>
    <string name="inat_network">iNaturalist Network</string>
    <string name="introducing_missions">Introducing Missions!</string>
    <string name="missions_onboarding_description">Missions are realtime recommendations of what to look for around you. This way you can discover species new to you! (Requires connectivity)</string>
    <string name="ok_got_it">Ok, got it!</string>
    <string name="no_results_found">No Results Found...</string>
    <string name="suggest_species">Suggest Species</string>
    <string name="suggest_species_description">Suggest species based on visual similarity to photos.</string>
    <string name="terrain">Terrain</string>
    <string name="do_you_think_this_could_be"><![CDATA[Is the evidence provided enough to confirm this is <b>%1$s</b>?]]></string>
    <string name="i_dont_know_but"><![CDATA[I don\'t know but I\'m sure this is <b>%1$s</b>.]]></string>
    <string name="no_but_it_is_a_member_of_taxon"><![CDATA[No, but it is a member of <b>%1$s</b>.]]></string>
    <string name="credits_title">Credits</string>
    <string name="agree2">Agree</string>
    <string name="attribute">Attribute</string>
    <string name="value">Value</string>
    <string name="disagree">Disagree</string>
    <string name="donate_to_inaturalist">Donate to iNaturalist</string>
    <string name="prefers_scientific_name_first">Show scientific names first</string>
    <string name="prefers_scientific_name_first_description">Show scientific names before common names.</string>
    <string name="duplicate">Duplicate</string>
    <string name="shop_the_inat_store">Shop the iNat Store</string>
    <string name="delete_your_account">Delete Your Account</string>
    <string name="delete_account_message"><![CDATA[By deleting your account you will remove:<br/><br/><ul><li> All of your observations, including the work of the all the people who have helped you out with identifications.</li><li> All of the identifications you\'ve added to the observations of other people, which will potentially affect the data quality of those observations.</li><li> All of the comments you\'ve added.</li></ul><br/>Furthermore, this action cannot be undone. If you change your mind later, you aren\'t getting any of that content back.<br/><br/>If this service generates too many notifications, consider <a href="https://www.inaturalist.org/users/edit">editing your settings on the website</a> to opt out of certain notifications or stop receiving email from us. If you\'re having trouble with a specific person, consider <a href="https://www.inaturalist.org/users/edit">muting them</a> instead of deleting your account.<br/><br/>If you\'re still sure you want to delete your account, enter <b>\"%1$s\"</b> in the form below and click the button to delete your account and all your data.]]></string>
    <string name="type_your_username">Type your username</string>
    <string name="third_party_data_sharing">Third-party Data Sharing</string>
    <string name="enabled">Enabled</string>
    <string name="common_names_place"><![CDATA[Common names place: <b>%1$s</b>]]></string>
    <string name="tap_to_prioritize_common_names">Tap to prioritize common names from a specific place.</string>
    <string name="send_a_message">Send a message</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="who_would_you_like_to_send_a_message_to">Who would you like to send a message to?</string>
    <string name="search_for_inaturalist_users">Search for iNaturalist users</string>
    <string name="no_subject">No Subject</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="show_common_names">Show common names</string>
    <string name="show_common_names_description">Disable if you only want to view scientific names.</string>
    <string name="default_licenses">Default Licenses</string>
    <string name="default_observation_license">Default Observation License</string>
    <string name="default_photo_license">Default Photo License</string>
    <string name="default_sound_license">Default Sound License</string>
    <string name="change_licenses_for_all_existing_observations">Change licenses for all existing observations</string>
    <string name="change_licenses_for_all_existing_photos">Change licenses for all existing photos</string>
    <string name="change_licenses_for_all_existing_sounds">Change licenses for all existing sounds</string>
</resources>