<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Preference
        android:layout="@layout/custom_preference"
        android:key="contact_support"
        android:title="@string/contact_support" />


     <Preference
        android:layout="@layout/custom_preference"
        android:key="about"
        android:title="@string/credits_title" />

    <Preference
        android:layout="@layout/custom_preference"
        android:key="shop"
        android:title="@string/shop_the_inat_store" />

     <Preference
        android:layout="@layout/custom_preference"
        android:key="donate"
        android:title="@string/donate_to_inaturalist" />

    <Preference
        android:layout="@layout/custom_preference"
        android:key="privacy_policy"
        android:title="@string/privacy_policy" />

    <Preference
        android:layout="@layout/custom_preference"
        android:key="terms_of_service"
        android:title="@string/terms_of_service" />

     <Preference
        android:layout="@layout/custom_preference_with_header"
        android:key="version"
        android:summary="1.2.3 (456)"
        android:title="@string/version" />

</androidx.preference.PreferenceScreen>