<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="#F5F5F5"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="14sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_message"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_marginBottom="12dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:hint="@string/type_your_username"
        />
    <Button
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete" />

</LinearLayout>
</ScrollView>