<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Preference
        android:layout="@layout/custom_preference"
        android:key="default_observation_license"
        android:title="@string/default_observation_license"
        android:summary="CC-BY-NC"
        />

    <Preference
        android:layout="@layout/custom_preference"
        android:key="default_photo_license"
        android:title="@string/default_photo_license"
        android:summary="CC-BY-NC"
        />

    <Preference
        android:layout="@layout/custom_preference"
        android:key="default_sound_license"
        android:title="@string/default_sound_license"
        android:summary="CC-BY-NC"
        />

</androidx.preference.PreferenceScreen>