<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#DCDCDC"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/attribute"
        android:textSize="13sp"
        android:textColor="#808080"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textSize="13sp"
        android:textColor="#808080"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/agree2"
        android:textSize="13sp"
        android:textColor="#808080"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/disagree"
        android:textSize="13sp"
        android:textColor="#808080"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        />


</LinearLayout>
