<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_think_this_could_be"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/no_disagreement"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_dont_know_but"
            />
         <RadioButton
             android:id="@+id/disagreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_but_it_is_a_member_of_taxon"
            />
    </RadioGroup>

</LinearLayout>