<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FF74AC00"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="39dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="69dp"
        android:layout_height="82dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_flag_black_48dp"
        android:tint="#FFA4E817"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        />
    <TextView
        android:id="@+id/title"
        android:layout_below="@id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introducing_missions"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:layout_marginTop="63dp"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missions_onboarding_description"
        android:textSize="13sp"
        android:textColor="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />

    <Button
        android:id="@+id/got_it"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/ok_got_it"
        android:background="@drawable/circular_button_light_green"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="81dp"
        />

</LinearLayout>
