<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/who_would_you_like_to_send_a_message_to"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_gray_background"
        android:hint="@string/search_for_inaturalist_users"
        android:inputType="text"
        android:paddingStart="17dp"
        android:paddingEnd="15dp"
        android:drawableEnd="@drawable/ic_fa_search"
        android:layout_alignParentTop="true"
        android:textAlignment="viewStart"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/no_users_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/no_results_found"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

</LinearLayout>