<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/action_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/edit_photo"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:padding="5dp"
            android:background="@null"
            android:contentDescription="@string/edit"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:id="@+id/duplicate_photo"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:src="@drawable/baseline_file_copy_black_24"
            android:padding="5dp"
            android:background="@null"
            android:contentDescription="@string/duplicate"
            android:layout_centerInParent="true"
            />

        <ImageButton
            android:id="@+id/delete_photo"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:padding="5dp"
            android:background="@null"
            android:contentDescription="@string/delete"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </LinearLayout>

    <uk.co.senab.photoview.HackyViewPager
        android:id="@+id/id_pic_view_pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/action_container"
         />
</RelativeLayout>
